<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="noteCallback"
            type="com.coding.tester.noteapp.callback.OnButtonsClick" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnLayout"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:maxLength="16"
                tools:ignore="Autofill,TextFields" />

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/write_new_note"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                tools:ignore="Autofill,TextFields" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_weight="1"
                android:onClick="@{ ()-> noteCallback.onSaveButtonClick() }"
                android:text="@string/save"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_weight="1"
                android:onClick="@{ () -> noteCallback.onCancelButtonClick() }"
                android:text="@string/cancel"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

    </RelativeLayout>

</layout>