<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/imgDelete"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/_4sdp"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap,UselessParent">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/description"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/_1_1_2001"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@null"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_baseline_delete_forever_24" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>